refactor!: init task creator structure (#106)
* refactor: init task creator structure

* Delete config/ss.json

* fix: git workflow

* feat: add test assertions

* fix: lint  helm

* fix: helm lint

* fix: remove max space size

* fix: export to output path

* fix: minResolution calculation

* feat: add jobTracker to additional params

* fix: revert

* fix: pr changes

* fix: helm changes

* fix: config

---------
