# src/serverBuilder.ts
@@ -1,28 +1,28 @@
 import express, { Router } from 'express';
 import bodyParser from 'body-parser';
 import compression from 'compression';
-import { OpenapiViewerRouter, OpenapiRouterConfig } from '@map-colonies/openapi-express-viewer';
+import { OpenapiViewerRouter } from '@map-colonies/openapi-express-viewer';
 import { getErrorHandlerMiddleware } from '@map-colonies/error-express-handler';
 import { middleware as OpenApiMiddleware } from 'express-openapi-validator';
 import { inject, injectable } from 'tsyringe';
 import { Logger } from '@map-colonies/js-logger';
 import httpLogger from '@map-colonies/express-access-log-middleware';
-import { SERVICES } from './common/constants';
-import { IConfig } from './common/interfaces';
+import { getTraceContexHeaderMiddleware } from '@map-colonies/telemetry';
+import { collectMetricsExpressMiddleware } from '@map-colonies/telemetry/prom-metrics';
+import { ConfigType } from '@common/config';
+import { SERVICES } from '@common/constants';
 import { STORAGE_ROUTER_SYMBOL } from './storage/routes/storageRouter';
-import { CREATE_PACKAGE_ROUTER_SYMBOL } from './createPackage/routes/createPackageRouter';
-import { TASKS_ROUTER_SYMBOL } from './tasks/routes/tasksRouter';
+import { EXPORT_ROUTER_SYMBOL } from './export/routes/exportRouter';
 
 @injectable()
 export class ServerBuilder {
   private readonly serverInstance: express.Application;
 
   public constructor(
-    @inject(SERVICES.CONFIG) private readonly config: IConfig,
+    @inject(SERVICES.CONFIG) private readonly config: ConfigType,
     @inject(SERVICES.LOGGER) private readonly logger: Logger,
     @inject(STORAGE_ROUTER_SYMBOL) private readonly createStorageRouter: Router,
-    @inject(CREATE_PACKAGE_ROUTER_SYMBOL) private readonly createPackageRouter: Router,
-    @inject(TASKS_ROUTER_SYMBOL) private readonly tasksRouter: Router
+    @inject(EXPORT_ROUTER_SYMBOL) private readonly createPackageRouter: Router
   ) {
     this.serverInstance = express();
   }
@@ -37,35 +37,33 @@ export class ServerBuilder {
 
   private buildDocsRoutes(): void {
     const openapiRouter = new OpenapiViewerRouter({
-      ...this.config.get<OpenapiRouterConfig>('openapiConfig'),
-      filePathOrSpec: this.config.get<string>('openapiConfig.filePath'),
+      ...this.config.get('openapiConfig'),
+      filePathOrSpec: this.config.get('openapiConfig.filePath'),
     });
     openapiRouter.setup();
-    this.serverInstance.use(this.config.get<string>('openapiConfig.basePath'), openapiRouter.getRouter());
+    this.serverInstance.use(this.config.get('openapiConfig.basePath'), openapiRouter.getRouter());
   }
 
   private buildRoutes(): void {
     this.serverInstance.use('/storage', this.createStorageRouter);
-    this.serverInstance.use('/create', this.createPackageRouter);
-    this.serverInstance.use('/', this.tasksRouter);
+    this.serverInstance.use('/export', this.createPackageRouter);
     this.buildDocsRoutes();
   }
 
   private registerPreRoutesMiddleware(): void {
-    this.serverInstance.use(httpLogger({ logger: this.logger, ignorePaths: ['/docs'] }));
+    this.serverInstance.use(collectMetricsExpressMiddleware({}));
+    this.serverInstance.use(httpLogger({ logger: this.logger, ignorePaths: ['/metrics'] }));
 
-    if (this.config.get<boolean>('server.response.compression.enabled')) {
-      this.serverInstance.use(compression(this.config.get<compression.CompressionFilter>('server.response.compression.options')));
+    if (this.config.get('server.response.compression.enabled')) {
+      this.serverInstance.use(compression(this.config.get('server.response.compression.options') as unknown as compression.CompressionFilter));
     }
 
-    this.serverInstance.use(bodyParser.json(this.config.get<bodyParser.Options>('server.request.payload')));
+    this.serverInstance.use(bodyParser.json(this.config.get('server.request.payload')));
+    this.serverInstance.use(getTraceContexHeaderMiddleware());
 
-    const ignorePathRegex = new RegExp(`^${this.config.get<string>('openapiConfig.basePath')}/.*`, 'i');
-    const apiSpecPath = this.config.get<string>('openapiConfig.filePath');
-    // todo - allowUnknownQueryParameters: true, its temporary  patch - should add proxy as permanent solution to except token jwt auth
-    this.serverInstance.use(
-      OpenApiMiddleware({ apiSpec: apiSpecPath, validateRequests: { allowUnknownQueryParameters: true }, ignorePaths: ignorePathRegex })
-    );
+    const ignorePathRegex = new RegExp(`^${this.config.get('openapiConfig.basePath')}/.*`, 'i');
+    const apiSpecPath = this.config.get('openapiConfig.filePath');
+    this.serverInstance.use(OpenApiMiddleware({ apiSpec: apiSpecPath, validateRequests: true, ignorePaths: ignorePathRegex }));
   }
 
   private registerPostRoutesMiddleware(): void {
